--- a/Exercise-0203.ipynb
+++ b/Exercise-0203.ipynb
@@ -90,14 +90,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Jumlah ayam sebelumnya yang dimiliki oleh peternak adalah 800.0\n"
+      "Jumlah ayam sebelumnya yang dimiliki oleh peternak adalah 800.0 ekor\n"
      ]
     }
    ],
@@ -112,7 +112,7 @@
     "\n",
     "a = Un/(r**(n-1))\n",
     "\n",
-    "print(\"Jumlah ayam sebelumnya yang dimiliki oleh peternak adalah\", a) "
+    "print(\"Jumlah ayam sebelumnya yang dimiliki oleh peternak adalah\", a, \"ekor\") "
    ]
   },
   {
@@ -148,15 +148,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Luas permukaan prisma segitiga adalah 181.1769145362398\n",
-      "Luas permukaan tabung adalah 561.0\n"
+      "Luas permukaan prisma segitiga adalah 181.1769145362398 cm^2\n",
+      "Luas permukaan tabung adalah 561.0 cm^2\n"
      ]
     }
    ],
@@ -174,10 +174,10 @@
     "sisi = (dictionary_figure[\"Persegi\"][\"Sisi\"])\n",
     "#A\n",
     "luasprisma = 1/2*2*sisisegitiga*tinggisegitiga+3*panjang*lebar\n",
-    "print(\"Luas permukaan prisma segitiga adalah\", luasprisma)\n",
+    "print(\"Luas permukaan prisma segitiga adalah\", luasprisma, \"cm^2\")\n",
     "#B\n",
     "luastabung = 2*22/7*(diameter*1/2)**2 + sisi**2\n",
-    "print(\"Luas permukaan tabung adalah\", luastabung)\n"
+    "print(\"Luas permukaan tabung adalah\", luastabung, \"cm^2\")\n"
    ]
   }
  ],
