--- a/Exercise-04.ipynb
+++ b/Exercise-04.ipynb
@@ -47,7 +47,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -65,7 +65,7 @@
     "nilai = int(input('Masukkan nilai tes user : '))\n",
     "\n",
     "\n",
-    "if umur >= 17 and nilai => 70 :\n",
+    "if umur >= 17 and nilai >= 70 :\n",
     "    print('Selamat Anda Berhak Mendapatkan SIM Anda')\n",
     "else:\n",
     "    print('Maaf, Anda tidak berhak mendapatkan SIM anda')"
